--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
-#Build Settings
-remote_theme: pages-themes/architect@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,6 +13,7 @@ plugins:
   <body>
     <main>
         <h1>I'm KurlTV or kurl-dt3y</h1>  
+	    <p1>YES</p1>
     </main>
 	<script src="index.js"></script>
   </body>
